fix(web): hide overflow by default for md

--- a/packages/web/src/components/markdown/StyledMarkdown.module.css
+++ b/packages/web/src/components/markdown/StyledMarkdown.module.css
@@ -2,6 +2,7 @@
 .markdown code {
   font-family: 'Hack', monospace !important;
   font-weight: 100 !important;
+  overflow: hidden;
 }
 
 .markdown pre {
